Added tests for the third delivery functions, updated README
Also, the longestStagesByWinner(Integer n) method has been fixed.